--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "pg": "^8.16.3",
@@ -44,6 +46,7 @@
     "@nestjs/testing": "^11.0.1",
     "@npm-questionpro/eslint-config-backend": "^1.0.7",
     "@npm-questionpro/wick-ui-prettier-config": "^1.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
